# backtest-environment

./: .gitignore  CMakeLists.txt  README.md  main.cpp
Backtest Environment/Backtest Environment/: data.cpp  data.hpp  events.cpp  events.hpp  execution.cpp  execution.hpp  interface.cpp  interface.hpp  main.cpp  portfolio.cpp  portfolio.hpp  strategiesheader.hpp
Backtest Environment/Backtest Environment.xcodeproj/: project.pbxproj
Backtest Environment/Backtest Environment.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Backtest Environment/Backtest Environment.xcodeproj/project.xcworkspace/xcuserdata/evankirkiles.xcuserdatad/: UserInterfaceState.xcuserstate
Backtest Environment/Backtest Environment.xcodeproj/xcuserdata/evankirkiles.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Backtest Environment/Backtest Environment.xcodeproj/xcuserdata/evankirkiles.xcuserdatad/xcschemes/: Backtest Environment.xcscheme  xcschememanagement.plist
Backtest Environment/Backtest Environment/Data Handling/: CSV directoryAAPL.csv  CSV directoryQQQ.csv  CSV directorySPY.csv  MarketDataFrame.cpp  MarketDataFrame.hpp  QQQ.csv  YahooFinanceCSVReader.cpp  YahooFinanceCSVReader.hpp  cookies.txt  crumb.txt  csvdatastruct.h  data.csv  test.txt
Backtest Environment/Backtest Environment/Data Handling/CSV directory/: AAPL.csv  GOOG.csv  QQQ.csv  SPY.csv
Backtest Environment/Backtest Environment/Graphics/: data.csv  gnuplotter.cpp  gnuplotter.hpp  positions.csv
Backtest Environment/Backtest Environment/Strategies/: benchmark.cpp  strat_buyandhold.cpp
DataHandling/: MarketDataFrame.cpp  MarketDataFrame.hpp  YahooFinanceCSVReader.cpp  YahooFinanceCSVReader.hpp  cookies.txt  crumb.txt
DataHandling/CSV directory/: AAPL.csv  CAT.csv  CSUNY.csv  GS.csv  LPNT.csv  MA.csv  QQQ.csv  SPY.csv  UHS.csv  V.csv
Graphics/: data.csv  gnuplotter.cpp  gnuplotter.hpp  montecarlo.cpp  montecarlo.csv  montecarlo.h  montecarlo.hpp  positions.csv  qtwindow.cpp  qtwindow.hpp  stylesheet.qss
Infrastructure/: data.cpp  data.hpp  events.cpp  events.hpp  execution.cpp  execution.hpp  interface.cpp  interface.hpp  portfolio.cpp  portfolio.hpp
Strategies/: benchmark.cpp  mainstrategy.cpp  strat_buyandhold.cpp  strat_pairstrading.cpp  strategiesheader.hpp
